# ccrun-benchmark

./: .gitignore  METHODOLOGY.md  README.md  VM_SETUP_GUIDE.md
benchmark/: analyze.py  compiler_benchmark.sh  run_benchmarks.sh  startup_breakdown.sh
benchmark/results/: analysis.json  startup_c.txt  startup_go.txt  startup_python.txt  startup_rust.txt  workload_cpu_c.txt  workload_cpu_go.txt  workload_cpu_python.txt  workload_cpu_rust.txt  workload_io_c.txt  workload_io_go.txt  workload_io_python.txt  workload_io_rust.txt  workload_mem_c.txt  workload_mem_go.txt  workload_mem_python.txt  workload_mem_rust.txt  workload_pure_cpu_c.txt  workload_pure_cpu_go.txt  workload_pure_cpu_python.txt  workload_pure_cpu_rust.txt  workload_pure_multicore_c.txt  workload_pure_multicore_go.txt  workload_pure_multicore_python.txt  workload_pure_multicore_rust.txt
c/: Makefile  ccrun.c
go/: go.mod  main.go
python/: ccrun.py
rust/: Cargo.toml
rust/src/: main.rs
