[package]
name = "ccrun"
version = "0.1.0"
edition = "2021"
description = "Coding Challenges Container Runtime (Rust)"

[dependencies]
nix = { version = "0.29", features = ["mount", "sched", "hostname", "process", "user", "signal", "fs"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
